# a11y-check

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
a11y_check/: __init__.py  core.py
tests/: test_a11y_check.py
